Fixed whitespaces and removed the default jquery-ui color theme. Added the new scripts for handling form validation to our items package and made some related template adjustments. refs #4471 refs 4481

--- a/pub/less/screen.less
+++ b/pub/less/screen.less
@@ -125,6 +125,23 @@ select
             }
         }
     }
+
+    li.inactive
+    {
+        opacity: 0.3;
+
+        &:hover
+        {
+            background: rgba(0, 0, 0, 0.05);
+
+            a
+            {
+                color: #000000;
+                cursor: default;
+                text-shadow: 0 0.05em 0 rgba(255, 255, 255, 0.7);
+            }
+        }
+    }
 }
 
 /* Common styles for small info boxes. */
